Fixing SSH issue